# Quendi

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: bin.rs  lib.rs
core/src/eng/: names.json  syntax.md
core/src/uxy/: xiinthlea.rs
data/: jpn.json
ontology/: architecture.json  core.json  countries.json  life.json  metals.json  nature.json
quenya/: Cargo.toml
quenya/src/: lexicon.rs  lib.rs  omni.rs  text.rs
quenya/src/ara/: lexicon.json  mod.rs
quenya/src/ara/aramorph/: buckwalter.rs  dict.rs  mod.rs  table.rs
quenya/src/ara/aramorph/data/: readme.txt
quenya/src/eng/: verbs.rs
quenya/src/jpn/: conjugate.rs
quenya/src/nld/: mod.rs
src/: lexicon.rs  lib.rs  segment.rs
src/eng/: lexicon.json  verbs.rs
src/jpn/: particles.rs
src/uxy/: mod.rs  syntax.md
wasm/: Cargo.toml
wasm/src/: lib.rs
wn/: Cargo.toml
wn/src/: lib.rs  pos.rs
wn/src/multi/: parse.rs
wn/src/princeton/: data.rs
