[package]
name = "wasm"
version = "0.1.0"
authors = ["Dennis Merkus <dennis.merkus@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib"]
